@@ -394,3 +394,38 @@ Z2SYMB = {1: 'H',                                                               
           113: 'Nh', 114: 'Fl', 115: 'Mc', 116: 'Lv', 117: 'Ts', 118: 'Og'}
 
 SYMB2Z = {v:k for k, v in Z2SYMB.items()}
+
+# Conversion between SYBYL atom types and corresponding elements
+# Tripos MOL2 file format:
+#   https://web.archive.org/web/*/http://chemyang.ccnu.edu.cn/ccb/server/AIMMS/mol2.pdf
+SYBYL2SYMB = {
+    "H": "H", "H.spc": "H", "H.t3p": "H",
+    "C.3": "C", "C.2": "C", "C.1": "C", "C.ar": "C", "C.cat": "C",
+    "N.3": "N", "N.2": "N", "N.1": "N", "N.ar": "N",
+    "N.am": "N", "N.pl3": "N", "N.4": "N",
+    "O.3": "O", "O.2": "O", "O.co2": "O", "O.spc": "O", "O.t3p": "O",
+    "S.3": "S", "S.2": "S", "S.O": "S", "S.O2": "S",
+    "S.o": "S", "S.o2": "S",  # Non-standard but often found in the wild...
+    "P.3": "P",
+    "F": "F",
+    "Li": "Li",
+    "Na": "Na",
+    "Mg": "Mg",
+    "Al": "Al",
+    "Si": "Si",
+    "K": "K",
+    "Ca": "Ca",
+    "Cr.th": "Cr",
+    "Cr.oh": "Cr",
+    "Mn": "Mn",
+    "Fe": "Fe",
+    "Co.oh": "Co",
+    "Cu": "Cu",
+    "Cl": "Cl",
+    "Br": "Br",
+    "I": "I",
+    "Zn": "Zn",
+    "Se": "Se",
+    "Mo": "Mo",
+    "Sn": "Sn",
+}
